# llm-platform-starter

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md  eval-methodology.md  failure-modes.md  roadmap.md  tradeoffs.md
docs/issues/: index.md  milestone-1.md  milestone-2.md  milestone-3.md  milestone-4.md
src/llm_platform_starter/: __init__.py  api.py  cli.py  main.py  models.py  settings.py
src/llm_platform_starter/evals/: __init__.py  metrics.py  runner.py
src/llm_platform_starter/evals/fixtures/: ticket_classification.jsonl
src/llm_platform_starter/examples/: __init__.py  document_extraction.py  ticket_classifier.py
src/llm_platform_starter/guardrails/: __init__.py  pii.py  validation.py
src/llm_platform_starter/observability/: __init__.py  cost.py  storage.py  tracing.py
src/llm_platform_starter/prompts/: __init__.py  registry.py
src/llm_platform_starter/prompts/templates/: ticket_classifier.json
src/llm_platform_starter/providers/: __init__.py  base.py  mock.py  openai_provider.py
tests/: test_cli.py  test_evals.py  test_guardrails.py  test_prompt_registry.py  test_providers.py  test_tracing.py
