[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-platform-starter"
version = "0.1.0"
description = "Minimal shared AI platform starter for provider routing, prompt versioning, evals, guardrails, and observability."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.7",
]

[project.optional-dependencies]
api = [
  "fastapi>=0.111",
  "uvicorn>=0.30",
]
openai = [
  "openai>=1.40",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[project.scripts]
llm-platform = "llm_platform_starter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
llm_platform_starter = [
  "prompts/templates/*.json",
  "evals/fixtures/*.jsonl",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
